@@ -1,5 +1,9 @@
 3/05/2006 Bob Rossi <bob@brasko.net>
 
+	* NEWS: Add note for tab completion (quoting lines).
+
+3/05/2006 Bob Rossi <bob@brasko.net>
+
 	* NEWS: Add note for tab completion.
 
 3/01/2006 Bob Rossi <bob@brasko.net>
